# linear-algebra-systems-notebook

./: README.md  pyproject.toml
assets/: README.md
docs/: conventions.md
notebooks/: 00_introducao_e_roadmap.ipynb  00_overview.ipynb  00_overview_roteiro.ipynb  01_conceitos_basicos_e_visualizacao_2d.ipynb  01_introducao_sistemas_lineares.ipynb  02_matriz_aumentada.ipynb  02_matriz_aumentada_e_representacao.ipynb  02_matrizes_e_operacoes.ipynb  03_eliminacao_gauss_e_gauss_jordan.ipynb  03_eliminacao_gauss_jordan.ipynb  03_metodos_resolucao_gauss_jordan.ipynb  04_espacos_vetoriais.ipynb  04_geometria_3d_e_independencia_linear.ipynb  04_interpretacao_geometrica_dependencia_linear.ipynb  04_sistemas_e_rouche_capelli.ipynb  05_espacos_e_subespacos.ipynb  05_subespaco.ipynb  05_transformacoes_lineares_e_matrizes.ipynb  05_transformacoes_lineares_sistemas.ipynb  06_aplicacao_fluxo_trafego.ipynb  06_combinacao_linear.ipynb  06_combinacao_linear_e_span.ipynb  06_modelagem_fluxo_trafego.ipynb  07_aplicacao_interpolacao_polinomial.ipynb  07_independencia_linear.ipynb  07_interpolacao_polinomial.ipynb  07_subespaco_gerado.ipynb  08_base_e_dimensao.ipynb  08_exercicios_resolvidos.ipynb  08_li_e_ld.ipynb  08_pratica_exercicios_resolvidos.ipynb  09_base.ipynb  09_conclusao_e_proximos_passos.ipynb  09_conclusao_proximos_passos.ipynb  09_transformacoes_lineares.ipynb  10_aplicacoes_praticas.ipynb  10_geometria_3d_e_independencia_linear.ipynb  11_conclusao_e_exercicios.ipynb  11_transformacoes_lineares_e_matrizes.ipynb  12_aplicacao_fluxo_trafego.ipynb  (+3 more)
notebooksU1/: 05_li_e_ld.ipynb  (+5 more)
(+3 files in other folders)
