[project]
name = "linear-algebra-systems-notebook"
version = "0.1.0"
description = "Jupyter notebooks for exploring linear algebra concepts and solving systems of equations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
